src/main/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lab-ms-graph
  namespace: labs
spec:
  selector:
    app: labs
    component: lab-ms-graph
  ports:
    - port: 8080
      targetPort: 8080
